--- a/src/components/pages/Home.css
+++ b/src/components/pages/Home.css
@@ -7,3 +7,10 @@
 .btn {
     margin-top: 30px;
 }
+
+@media (max-width:600px) {
+    .welcome {
+        font-size: 20px;
+        margin: 20px
+    }
+}
