suite responsive + page About

--- a/src/components/movies/CompleteMovieCard.css
+++ b/src/components/movies/CompleteMovieCard.css
@@ -23,12 +23,13 @@
 .trailer {
     height: 315px;
     width: 560px;
+    margin-bottom: 50px;
 }
 
 .back {
     position: absolute;
     left: 20px;
-    top: 30px;
+    top: 65px;
 }
 
 @media (max-width:600px) {
