--- a/src/components/movies/List.css
+++ b/src/components/movies/List.css
@@ -7,14 +7,14 @@
 
 .showlist {
     margin: 10px;
-
-
-
+    width: 100%;
 }
 
-.listtitle:hover {
-    background-color: rgba(178, 248, 225, 0.6);
-    border-radius: 10px;
+.dblists {
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: space-around;
+
 }
 
 .listtitle {
@@ -22,8 +22,14 @@
     display: inline-block;
     font-size: 15px;
     align-items: center;
+    border-bottom: solid rgba(116, 115, 115, 0.486) 1px;
 
 }
+
+.listtitle:hover {
+    background-color: rgba(178, 248, 225, 0.6);
+}
+
 
 img {
     margin: 3px;
